# Argus

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.bak  license.txt  main.sh
.cache/clangd/index/: account.cpp.155192415E57789B.idx  account.h.80B236A3ABC0BC50.idx  asset.cpp.96890BF0CF1FD1ED.idx  asset.h.DE521160ABC0AE40.idx  attr.h.ACA1229B3F109B05.idx  broker.cpp.004D81C24920AAB9.idx  broker.h.ACE24C777258D3D2.idx  buffer_info.h.9F24835DC1F5A5E4.idx  cast.h.3E76C44DE314F228.idx  class.h.5951B5967891D63D.idx  common.h.249207156EF21FE0.idx  complex.h.29C3BD2BFBD0A6B2.idx  core.h.D69319239825601B.idx  descr.h.9A5CB68A04DCA291.idx  exchange.cpp.1FD52C3A68DA5A73.idx  exchange.h.5AB80935E6C77E37.idx  format-inl.h.B8713C046F11CA1B.idx  format.cc.4BD0859A38B16DDE.idx  format.h.8ECF37C1B85C9ACD.idx  gil.h.ED9651CB569AA7FA.idx  history.h.FA7F12D82E9234B7.idx  hydra.cpp.B44591CA001D612E.idx  hydra.h.37B75DA124C36713.idx  init.h.FF5C8831EEE96EBB.idx  internals.h.6ABD674AB5A083A6.idx  main.cpp.DEBED133DB1C17C0.idx  numpy.h.28214F1082342674.idx  options.h.11CC583FF8A0CF0E.idx  order.cpp.4C8F0A530DF39A56.idx  order.h.6B9AF966EF5FCBB2.idx  os.cc.ADF7F005B5BDEEFF.idx  os.h.1C5389209304B721.idx  portfolio.cpp.C83FAEA4E60705E6.idx  portfolio.h.3259A5D46520AE43.idx  position.cpp.0DDB35F1159094F3.idx  position.h.413EA332EB602B3F.idx  pybind11.h.FA7A2F5E659E7447.idx  pytypes.h.C7299F16F05E42F1.idx  robin_growth_policy.h.CC1C27162BA24017.idx  robin_hash.h.81FE6C5F37AC5124.idx  (+11 more)
Argus/: setup.py
Argus/FastTest/: Asset.py  Hal.py  Simulator.py
Argus/FastTest/examples/: helpers.py  reversion.py  trending.ipynb
Argus/FastTest/tests/: helpers.py  test_all.py  test_asset.py  test_backtrader.py  test_exchange.py  test_hal.py  test_portfolio.py  test_strategy.py
Argus/FastTest/tests/data/: SPY_DAILY.csv
include/: account.h  asset.h  broker.h  exchange.h  history.h  hydra.h  order.h  portfolio.h  position.h  settings.h  strategy.h  string_helpers.h  test.h  threaded.h  tracers.h  trade.h  utils_array.h  utils_string.h  utils_time.h
src/: account.cpp  asset.cpp  broker.cpp  exchange.cpp  hydra.cpp  main.cpp  order.cpp  portfolio.cpp  position.cpp  test.cpp  tracers.cpp  trade.cpp  utils_time.cpp
